--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "captcha-com/laravel-captcha": "4.*",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "mews/purifier": "^2.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
