--- a/.env_online
+++ b/.env_online
@@ -10,7 +10,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=ieiancho_cms_web
 DB_USERNAME=ieiancho_cms_us
-DB_PASSWORD=g6u-?)Lfs)BB
+DB_PASSWORD=SP4CTBGP1z
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
